@@ -3,7 +3,8 @@
 #source: group0.s
 
 #...
+[ 	]*\[.*\][ 	]+\.foo_group[ 	]+GROUP.*
+#...
 [ 	]*\[.*\][ 	]+\.foo[ 	]+PROGBITS.*[ 	]+AXG[ 	]+.*
 [ 	]*\[.*\][ 	]+\.bar[ 	]+PROGBITS.*[ 	]+AG[ 	]+.*
-[ 	]*\[.*\][ 	]+\.foo_group[ 	]+GROUP.*
 #pass
